# gfg

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/alg/: CMakeLists.txt  alg.hpp  version.cpp
src/alg/search/: search.hpp  search_binary.cpp  search_jump.cpp  search_linear.cpp
src/alg/shuffle/: shuffle.cpp  shuffle.hpp
src/helper/: CMakeLists.txt  helper.hpp  out_container.hpp  trim.cpp  version.cpp
src/test/: CMakeLists.txt  test.hpp  test_out_container.cpp
